--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,5 @@ jobs:
         run: ./connect.sh
       - name: Check connection
         run: ./status.sh
+      - name: Disconnect, delete registration
+      - run: warp-cli disconnect && warp-cli --accept-tos registration delete
